Rudimentary version of calendar graph processor working.